 * Sped up writing log files in certain situations. ([25499])
 * Corrected some situations where the log viewer lacked icons for group chats.
 * Events such as Direct IM status, joins and parts, and other information are now logged and displayed in the log viewer.
 * Increased the maximum amount of recent messages you can display for chats from 100 to 400.

Contact List
 * Contact list filtering is now present on all window styles: regular, borderless, etc. (#10489)
 * Corrected a few bugs where contacts were hidden as offline when online, or placed in the offline group incorrectly.
 * Combined contacts now show the information in the contact list for the first available user. (#11007)
 * Improved speed of searching in contact list for larger lists.
 * Fix a small white line at the top of the contact list when "size to fit vertically" is set. (#11119)
 * Add "Sort Groups Alphabetically" option to the status sort.
 * Add "Hide Away Contacts" and "Hide Contacts for Account" to the view options.
 * Fixed a bug where the view menu would show incorrect settings.
 * Status message is no longer searched when searching the contact list.
 * Fixed a lot of drag and drop bugs, such as being able to drag a group into another group.

Message Styles
 * You can now specify a different style for group chats, and customize all of the preferences independently of a regular chat. (#87)
 * Messages containing unordered lists are now displayed using bullets.
 * Styles now fall backs to root level files for Status.html and Content.html. (#10868)
 * Corrected sorting of message styles in their popup (#9498)
 * %message% is now replaced in a loop as we do other keywords. (#9672)
 * %service% is now replaced in all templates, not just messages. (#11872)
 * %senderPrefix% now contains a textual representation (., @, %, +, or an empty string) of the user's status in a group chat. (#11882)
 * %userIconPath% is now a valid replacement keyword in Status.html (#7508)