@@ -59,6 +59,7 @@ Logging
  * Corrected some situations where the log viewer lacked icons for group chats.
  * Events such as Direct IM status, joins and parts, and other information are now logged and displayed in the log viewer.
  * Increased the maximum amount of recent messages you can display for chats from 100 to 400.
+ * Added an Import option to reindex the logs folder in case you manually add logs. (#9554)
 
 Contact List
  * Contact list filtering is now present on all window styles: regular, borderless, etc. (#10489)
